[gd_scene load_steps=4 format=3 uid="uid://cvltd3limee7u"]

[ext_resource type="Script" uid="uid://des0bvvfhi45f" path="res://Pause/pause_menu.gd" id="1_iqvbm"]

[sub_resource type="SystemFont" id="SystemFont_c4qrp"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_iqvbm"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqvbm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Paused" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_c4qrp")
theme_override_font_sizes/font_size = 100
text = "Paused"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = SubResource("SystemFont_iqvbm")
theme_override_font_sizes/font_size = 35
text = "Continue"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = SubResource("SystemFont_iqvbm")
theme_override_font_sizes/font_size = 35
text = "Restart"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_iqvbm")
theme_override_font_sizes/font_size = 35
text = "Quit"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
